# AI_toy

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/hardware_driver/boards/esp32-s3/: bsp_board.c
components/hardware_driver/boards/include/: bsp_board.h
components/helix-mp3/: CMakeLists.txt  Kconfig
components/mbedtls-2.28/: CMakeLists.txt
components/mongoose/: CMakeLists.txt  mongoose.c  mongoose_config.h
components/opus-1.5.2/: CMakeLists.txt  Kconfig
driver/audio/: audio.c  audio.h  audio_private.h  mp3_decoder_port.c  opus_decoder_port.c
main/: AI_toy.c  CMakeLists.txt
main/app/: CMakeLists.txt  websocket.c  websocket.h
main/app/aliyun/: app_aliyun_mqtt.c
main/app/audio/: audio.c  audio.h  audio_private.h  mp3_decoder_port.c  opus_decoder_port.c
main/app/esp-sr/: app_sr.c  app_sr.h
main/app/websocket/: websocket.c  websocket.h
